# webkitgtk3-hello

./: README  stack.yaml  webkitgtk3-hello.cabal
app/: Main.hs
